objects/EUR_CRM_Competitor_Promo_Tracking_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipLabel>Competitor Promo Tracking Items (EU)</relationshipLabel>
        <relationshipName>Competitor_Promo_Tracking_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>Competitor Promo Tracking Items (EU)</relationshipLabel>
        <relationshipName>Competitor_Promo_Tracking_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>Competitor Promo Tracking Items (EU)</relationshipLabel>
        <relationshipName>Competitor_Promo_Tracking_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Competitor_Promo_Tracking__c</fullName>
        <label>Competitor Promo Tracking</label>
        <referenceTo>EUR_CRM_Competitor_Promo_Tracking__c</referenceTo>
        <relationshipLabel>Competitor Promo Tracking Items (EU)</relationshipLabel>
        <relationshipName>Competitor_Promo_Tracking_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Retail_Sales_Price__c</fullName>
        <label>Retail Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Competitor Promo Tracking Item (EU)</label>
    <nameField>
        <displayFormat>CPTI-{0000000000}</displayFormat>
        <label>Competitor Promo Tracking Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Promo Tracking Items (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Off_Trade_CPT_Item</fullName>
        <active>true</active>
        <label>EUR BE Off Trade CPT Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_On_Trade_CPT_Item</fullName>
        <active>true</active>
        <label>EUR BE On Trade CPT Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Off_Trade_CPT_Item</fullName>
        <active>true</active>
        <label>EUR BG Off Trade CPT Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_On_Trade_CPT_Item</fullName>
        <active>true</active>
        <label>EUR BG On Trade CPT Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Off_Trade_CPT_Item</fullName>
        <active>true</active>
        <label>EUR DK Off Trade CPT Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_On_Trade_CPT_Item</fullName>
        <active>true</active>
        <label>EUR DK On Trade CPT Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>